[package]
edition = "2021"
name = "binary2treemap"
version = "0.0.2"
description = "Map each byte in a compiled binary to the corresponding source code file and line. Helps investigate binary bloat."
homepage = "https://github.com/Enselic/binary2treemap"
documentation = "https://docs.rs/binary2treemap"
readme = "README.md"
# TODO keywords = ["foo", "bar"]
# TODO categories = ["baz", "bom"]
license = "MIT"
repository = "https://github.com/Enselic/binary2treemap"

[dependencies]
addr2line = "0.21.0"
askama_axum = "0.4.0"
axum = "0.7.4"
serde_derive = "1.0.196"
serde_json = "1.0.113"
syntect = "5.2.0"

[dependencies.askama]
version = "0.12.1"
default-features = false
features = ["with-axum"]

[dependencies.tokio]
version = "1.36.0"
features = ["macros", "rt"]

[dependencies.clap]
version = "4.4.10"
features = ["derive", "wrap_help"]

[dependencies.object]
version = "0.32.2"
default-features = false
features = ["read"]

[dependencies.serde]
version = "1.0.196"

[profile.release]
# So we can use this tool on our own release builds. Note that codgen is still
# optimized, thus just adds debug info to the binary.
debug = true
